fixed background
the background got messed up again without me noticing, because it's so subtle but i fixed it

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,21 +6,16 @@
 body {
   padding: 50px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  /* background-color: #f7f4e8; */
   margin: 0;
   padding: 0;
-  /* background-color: #e5e5f7; */
-  background-color: rgb(232, 230, 242);
-  opacity: 0.85;
-  background-image: radial-gradient(
-    /* #cb45f7 0.6000000000000001px, */ #3d64e4 0.6000000000000001px,
-    /* #e5e5f7 0.6000000000000001px */ rgb(232, 230, 242) 0.6000000000000001px
-  );
-  background-size: 12px 12px;
+  background-color: #e5e5f7;
+  opacity: 0.9;
+  background-image: radial-gradient(#444cf7 0.75px, #e5e5f7 0.75px);
+  background-size: 15px 15px;
+  position: relative; /* Set a non-static position for the z-index to work */
 }
 
 .content-container {
-  /* background-color: rgb(244, 243, 250); */
   background-color: #d8d4ee;
   padding: 20px; /* Adjust as needed */
   border-radius: 10px; /* Adjust as needed for rounded edges */
@@ -33,17 +28,13 @@ a {
 }
 
 .btn {
-  /* background-color: rgb(238, 142, 233); */
   background-color: #3d64e4;
   color: #ffffff;
   transition: all 0.7s;
 }
 
 .navbar {
-  /* font-family: "Courier New", Courier, monospace; */
-  /* font-weight: 900; */
   font-size: 17px;
-  /* background-color: rgb(247, 244, 232); */
   background-color: #d8d4ee;
 }
 
@@ -107,7 +98,6 @@ a {
 }
 
 .skill-button {
-  /* background-color: rgb(238, 142, 233); */
   background-color: #3d64e4;
   color: #fff;
   padding: 10px;
@@ -129,4 +119,9 @@ h3 {
 
 .pic {
   border-radius: 50%;
+}
+
+.blog-link {
+  color: inherit;
+  text-decoration: none;
 }
